--- a/src/terminal-menubar.ui.in
+++ b/src/terminal-menubar.ui.in
@@ -18,8 +18,8 @@
 <interface>
   <menu id="menubar">
     <submenu>
-      <WITH_MNEMONIC><attribute name="label" translatable="yes">_File</attribute></WITH_MNEMONIC>
-      <WITHOUT_MNEMONIC><attribute name="label" translatable="yes">File</attribute></WITHOUT_MNEMONIC>
+      @WITH_MNEMONIC_START@<attribute name="label" translatable="yes">_File</attribute>@WITH_MNEMONIC_END@
+      @WITHOUT_MNEMONIC_START@<attribute name="label" translatable="yes">File</attribute>@WITHOUT_MNEMONIC_END@
       <section id="new-terminal-section" />
       <section>
         <item>
@@ -52,8 +52,8 @@
       </section>
     </submenu>
     <submenu>
-      <WITH_MNEMONIC><attribute name="label" translatable="yes">_Edit</attribute></WITH_MNEMONIC>
-      <WITHOUT_MNEMONIC><attribute name="label" translatable="yes">Edit</attribute></WITHOUT_MNEMONIC>
+      @WITH_MNEMONIC_START@<attribute name="label" translatable="yes">_Edit</attribute>@WITH_MNEMONIC_END@
+      @WITHOUT_MNEMONIC_START@<attribute name="label" translatable="yes">Edit</attribute>@WITHOUT_MNEMONIC_END@
       <section>
         <item>
           <attribute name="label" translatable="yes">_Copy</attribute>
@@ -89,8 +89,8 @@
       </section>
     </submenu>
     <submenu>
-      <WITH_MNEMONIC><attribute name="label" translatable="yes">_View</attribute></WITH_MNEMONIC>
-      <WITHOUT_MNEMONIC><attribute name="label" translatable="yes">View</attribute></WITHOUT_MNEMONIC>
+      @WITH_MNEMONIC_START@<attribute name="label" translatable="yes">_View</attribute>@WITH_MNEMONIC_END@
+      @WITHOUT_MNEMONIC_START@<attribute name="label" translatable="yes">View</attribute>@WITHOUT_MNEMONIC_END@
       <section>
         <item>
           <attribute name="label" translatable="yes">Show _Menubar</attribute>
@@ -118,8 +118,8 @@
       </section>
     </submenu>
     <submenu>
-      <WITH_MNEMONIC><attribute name="label" translatable="yes">_Search</attribute></WITH_MNEMONIC>
-      <WITHOUT_MNEMONIC><attribute name="label" translatable="yes">Search</attribute></WITHOUT_MNEMONIC>
+      @WITH_MNEMONIC_START@<attribute name="label" translatable="yes">_Search</attribute>@WITH_MNEMONIC_END@
+      @WITHOUT_MNEMONIC_START@<attribute name="label" translatable="yes">Search</attribute>@WITHOUT_MNEMONIC_END@
       <section>
         <item>
           <attribute name="label" translatable="yes">_Find…</attribute>
@@ -140,8 +140,8 @@
       </section>
     </submenu>
     <submenu>
-      <WITH_MNEMONIC><attribute name="label" translatable="yes">_Terminal</attribute></WITH_MNEMONIC>
-      <WITHOUT_MNEMONIC><attribute name="label" translatable="yes">Terminal</attribute></WITHOUT_MNEMONIC>
+      @WITH_MNEMONIC_START@<attribute name="label" translatable="yes">_Terminal</attribute>@WITH_MNEMONIC_END@
+      @WITHOUT_MNEMONIC_START@<attribute name="label" translatable="yes">Terminal</attribute>@WITHOUT_MNEMONIC_END@
       <section>
         <section id="set-profile-section" />
         <item>
@@ -195,8 +195,8 @@
       </section>
     </submenu>
     <submenu>
-      <WITH_MNEMONIC><attribute name="label" translatable="yes">Ta_bs</attribute></WITH_MNEMONIC>
-      <WITHOUT_MNEMONIC><attribute name="label" translatable="yes">Tabs</attribute></WITHOUT_MNEMONIC>
+      @WITH_MNEMONIC_START@<attribute name="label" translatable="yes">Ta_bs</attribute>@WITH_MNEMONIC_END@
+      @WITHOUT_MNEMONIC_START@<attribute name="label" translatable="yes">Tabs</attribute>@WITHOUT_MNEMONIC_END@
       <attribute name="action">win.tabs-menu</attribute>
       <attribute name="hidden-when">action-disabled</attribute>
       <section>
@@ -227,8 +227,8 @@
       </section>
     </submenu>
     <submenu>
-      <WITH_MNEMONIC><attribute name="label" translatable="yes">_Help</attribute></WITH_MNEMONIC>
-      <WITHOUT_MNEMONIC><attribute name="label" translatable="yes">Help</attribute></WITHOUT_MNEMONIC>
+      @WITH_MNEMONIC_START@<attribute name="label" translatable="yes">_Help</attribute>@WITH_MNEMONIC_END@
+      @WITHOUT_MNEMONIC_START@<attribute name="label" translatable="yes">Help</attribute>@WITHOUT_MNEMONIC_END@
       <section>
         <item>
           <attribute name="label" translatable="yes">_Contents</attribute>
