--- a/Makefile.meson
+++ b/Makefile.meson
@@ -1,4 +1,4 @@
-# Copyright © 2018, 2019 Iñigo Martínez
+# Copyright © 2019 Christian Persch
 #
 # This programme is free software; you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by
@@ -11,11 +11,33 @@
 # See the GNU General Public License for more details.
 #
 # You should have received a copy of the GNU General Public License
-# along with this programme.  If not, see <https://www.gnu.org/licenses/>.
+# along with this library.  If not, see <https://www.gnu.org/licenses/>.
 
-i18n = import('i18n')
+srcdir=@srcdir@
+builddir=@builddir@
 
-i18n.gettext(
-  gt_gettext_domain,
-  preset: 'glib',
-)
+#
+
+NTHREADS = 1
+NJOBS = -j$(NTHREADS)
+NINJA = ninja $(NJOBS)
+
+#
+
+all:
+	$(NINJA)
+
+check:
+	MESON_TESTTHREADS=$(NTHREADS) $(NINJA) test
+
+clean:
+	$(NINJA) clean
+
+coverage:
+	$(NINJA) coverage
+
+install:
+	$(NINJA) install
+
+uninstall:
+	$(NINJA) uninstall
