--- a/meson.build
+++ b/meson.build
@@ -1,12 +1,57 @@
+# Copyright © 2018, 2019 Iñigo Martínez
+# Copyright © 2019 Christian Persch
+#
+# This programme is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or (at your
+# option) any later version.
+#
+# This programme is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+# See the GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this programme.  If not, see <https://www.gnu.org/licenses/>.
+
 project(
-  'GNOME Terminal', 'c',
+  'gnome-terminal',
+  ['c'],
   version: '3.33.0',
-  license: 'GPL3+',
-  default_options: 'buildtype=debugoptimized',
-  meson_version: '>= 0.50.0',
+  license: ['GPL-3.0-or-later'],
+  default_options: [
+    'buildtype=release',
+    'c_std=gnu11',
+    'warning_level=' + (meson.version().version_compare('>= 0.50.0') ? '0' : '1'),
+    'b_ndebug=false',
+  ],
+  meson_version: '>= 0.49.0',
 )
 
-gt_name = 'gnome-terminal'
+# Naming
+
+gt_name       = 'gnome-terminal'
+gt_namespace  = 'Terminal'
+gt_iface_name = 'org.gnome.' + gt_namespace
+
+# Requirements
+
+vte_req_version               = '0.57.0'
+
+gtk3_req_version              = '3.12.0'
+gtk4_req_version              = '4.0.0'
+
+dconf_req_version             = '0.14.0'
+gio_req_version               = '2.34.0'
+glib_req_version              = '2.42.0'
+gsettings_schemas_req_version = '0.1.0'
+pango_req_version             = '1.0'
+pcre2_req_version             = '10.21'
+
+vte_gtk3_api_version          = '2.91'
+vte_gtk4_api_version          = '3.91'
+
+# Versioning
 
 gt_version = meson.project_version()
 version_array = gt_version.split('.')
@@ -14,230 +59,343 @@ gt_major_version = version_array[0].to_int()
 gt_minor_version = version_array[1].to_int()
 gt_micro_version = version_array[2].to_int()
 
-gt_prefix = get_option('prefix')
+# i18n
+
+gt_gettext_domain = gt_name
+
+# Directories
+
 gt_datadir = get_option('datadir')
 gt_libdir = get_option('libdir')
 gt_libexecdir = get_option('libexecdir')
 gt_localedir = get_option('localedir')
+gt_prefix = get_option('prefix')
 
 gt_pkgdatadir = gt_datadir / gt_name
 
-gt_namespace = 'Terminal'
-gt_iface_name = 'org.gnome.' + gt_namespace
+# Debug
 
-gt_debug = get_option('buildtype').contains('debug')
+enable_debug = get_option('debugg') or get_option('debug') or get_option('buildtype').contains('debug')
+
+# Meson modules
 
 gnome = import('gnome')
-i18n = import('i18n')
 pkg = import('pkgconfig')
 
-source_root = meson.current_source_dir()
+i18n = import('i18n')
+podir = meson.current_source_dir() / 'po'
 
-po_dir = source_root / 'po'
-
-intltool_merge = find_program('intltool-merge')
-intltool_cache = po_dir / '.intltool-merge-cache'
-intltool_desktop_cmd = [intltool_merge, '-d', '-u', '-c', intltool_cache, po_dir, '@INPUT@', '@OUTPUT@']
-intltool_xml_cmd = [intltool_merge, '-x', '-u', '-c', intltool_cache, po_dir, '@INPUT@', '@OUTPUT@']
-
-top_inc = include_directories('.')
+# Compilers
 
 cc = meson.get_compiler('c')
 
+top_inc = include_directories('.')
+
+# Start config.h
+
 config_h = configuration_data()
 
-# version
+config_h.set_quoted('GETTEXT_PACKAGE', gt_gettext_domain)
 config_h.set_quoted('VERSION', gt_version)
+config_h.set('ENABLE_DEBUG', enable_debug)
 
-# Globally define_GNU_SOURCE and therefore enable the GNU extensions
-config_h.set('_GNU_SOURCE', true)
+# FIXME AC_USE_SYSTEM_EXTENSIONS also supported non-gnu systems
+config_h.set10('_GNU_SOURCE', true)
 
-# Debugging
-config_h.set('ENABLE_DEBUG', gt_debug)
+# Compiler
 
-# i18n
-config_h.set_quoted('GETTEXT_PACKAGE', gt_name)
+# Meson has a misfeature where it allows the user to override the -std option
+# for the C/C++ compiler. Disallow that.
 
-# compiler flags
-common_flags = ['-DHAVE_CONFIG_H']
-warn_flags = []
+assert(get_option('c_std') == 'gnu11', 'cannot override C std version')
 
-if gt_debug
-  common_flags += cc.get_supported_arguments([
-    #'-pthread',
-    #'-pipe',
-    '-fdiagnostics-show-option',
-    '-fno-common',
-    '-fno-strict-aliasing',
-    '-fstack-protector',
-    '-fstack-protector-strong',
-    '-fvisibility=hidden',
-    '-Waggregate-return',
-    '-Wcast-align',
-    '-Werror=format=2',
-    '-Werror=format-nonliteral',
-    '-Werror=format-security',
-    '-Werror=implicit-function-declaration',
-    '-Werror=init-self',
-    '-Werror=missing-include-dirs',
-    '-Werror=missing-prototypes',
-    '-Werror=pointer-arith',
-    '-Wfloat-equal',
-    '-Wformat-signedness',
-    '-Wlogical-op',
-    '-Wmissing-declarations',
-    '-Wmissing-format-attribute',
-    '-Wmissing-include-dirs',
-    '-Wmissing-noreturn',
-    '-Wnested-externs',
-    '-Wno-missing-field-initializers',
-    '-Wno-switch-enum',
-    '-Wno-unused-parameter',
-    '-Wold-style-definition',
-    '-Wpacked',
-    '-Wshadow',
-    '-Wstrict-prototypes',
-    '-Wundef',
-    '-Wunsafe-loop-optimizations',
-    '-Wwrite-strings',
-  ])
+# Asserts must not be disabled
+
+assert(get_option('b_ndebug') == 'false', 'assertions may not be disabled')
+
+# Compiler flags
+
+compiler_flags_common = [
+  '-Wall',
+  '-Wcast-align',
+  '-Wendif-labels',
+  '-Werror=implicit-function-declaration',
+  '-Werror=init-self',
+  '-Werror=missing-include-dirs',
+  '-Werror=missing-prototypes',
+  '-Werror=pointer-arith',
+  '-Wextra',
+  '-Wfloat-equal',
+  '-Wformat-signedness',
+  '-Winvalid-pch',
+  '-Wlogical-op',
+  '-Wmissing-declarations',
+  '-Wmissing-format-attribute',
+  '-Wmissing-include-dirs',
+  '-Wmissing-noreturn',
+  '-Wno-missing-field-initializers',
+  '-Wno-switch-enum',
+  '-Wno-unused-parameter',
+  '-Wpacked',
+  '-Wshadow',
+  '-Wsign-compare',
+  '-Wstrict-aliasing=2',
+  '-Wundef',
+  '-Wuninitialized',
+  '-Wunsafe-loop-optimizations',
+  '-Wvla',
+  '-Wwrite-strings',
+  '-fdiagnostics-show-option',
+  '-fno-common',
+  '-fstack-protector',
+  '-fstack-protector-strong',
+  '-fvisibility=hidden',
+]
+
+if enable_debug
+  compiler_flags_common += [
+    '-ggdb3',
+  ]
 endif
 
-add_project_arguments(common_flags, language: 'c')
+# These are currently needed but the code should be fixed instead
+compiler_flags_common_undesirable = [
+  '-fno-strict-aliasing'
+]
 
-dconf_dep = dependency('dconf', version: '>= 0.14.0')
-gio_dep = dependency('gio-2.0', version: '>= 2.34.0')
-glib_dep = dependency('glib-2.0', version: '>= 2.42.0')
-gsettings_desktop_schemas_dep = dependency('gsettings-desktop-schemas', version: '>= 0.1.0')
-gtk_dep = dependency('gtk+-3.0', version: '>= 3.12.0')
-libpcre_dep = dependency('libpcre2-8', version: '>= 10.00')
-threads_dep = dependency('threads')
-uuid_dep = dependency('uuid')
-vte_dep = dependency('vte-2.91', version: '>= 0.55.92')
+compiler_flags_c_only = [
+  '-Waggregate-return',
+  '-Wimplicit',
+  '-Wimplicit-fallthrough=3',
+  '-Wnested-externs',
+  '-Wold-style-definition',
+  '-Wstrict-prototypes',
+]
 
-m_dep = cc.find_library('m')
+global_cflags = cc.get_supported_arguments(compiler_flags_common +
+                                           compiler_flags_common_undesirable +
+                                           compiler_flags_c_only)
 
-gdk_dep = dependency('gdk-3.0')
-gdk_targets = gdk_dep.get_pkgconfig_variable('targets')
+# Meson problem: GCC only accepts the latter 2 options of the 3 below
+# if the first is *also* passed, which doesn't work with get_supported_arguments()
+# above. So just add these unconditionally, since all compilers we support
+# accept these flags.
 
-gdk_x11_target = gdk_targets.contains('x11')
-if gdk_x11_target
-  x11_dep = dependency('x11')
+compiler_flags_format_warnings = [
+  '-Werror=format=2',
+  '-Werror=format-nonliteral',
+  '-Werror=format-security',
+]
+
+global_cflags += compiler_flags_format_warnings
+
+# ... and now make these flags the default
+
+add_project_arguments(global_cflags, language: 'c')
+
+# Dependencies
+
+dconf_dep     = dependency('dconf',      version: '>=' + dconf_req_version)
+gio_dep       = dependency('gio-2.0',    version: '>=' + gio_req_version)
+glib_dep      = dependency('glib-2.0',   version: '>=' + glib_req_version)
+gobject_dep   = dependency('gobject-2.0')
+gsettings_dep = dependency('gsettings-desktop-schemas', version: '>=' + gsettings_schemas_req_version)
+pango_dep     = dependency('pango',      version: '>=' + pango_req_version)
+pcre2_dep     = dependency('libpcre2-8', version: '>=' + pcre2_req_version)
+pthreads_dep  = dependency('threads')
+uuid_dep      = dependency('uuid')
+zlib_dep      = dependency('zlib')
+
+if get_option('gtk3')
+  gdk3_dep     = dependency('gdk-3.0')
+  gtk3_dep     = dependency('gtk+-3.0', version: '>=' + gtk3_req_version)
+  vte_gtk3_dep = dependency('vte-' + vte_gtk3_api_version, version: '>=' + vte_req_version)
+
+  gdk3_targets = gdk3_dep.get_pkgconfig_variable('targets')
+  if gdk3_targets.contains('x11')
+    x11_dep = dependency('x11')
+  else
+    x11_dep = dependency('', required: false)
+  endif
+else
+  gtk3_dep     = dependency('', required: false)
+  vte_gtk3_dep = dependency('', required: false)
+  x11_dep      = dependency('', required: false)
 endif
 
-if gdk_targets.contains('win32') or gdk_targets.contains('quartz')
-  warning('unsupported GDK backend target')
+if get_option('gtk4')
+  gtk4_dep     = dependency('gtk+-4.0', version: '>=' + gtk4_req_version)
+  vte_gtk4_dep = dependency('vte-' + vte_gtk4_api_version, version: '>=' + vte_req_version)
+else
+  gtk4_dep     = dependency('', required: false)
+  vte_gtk4_dep = dependency('', required: false)
 endif
 
-if not (gdk_targets.contains('broadway') or gdk_targets.contains('wayland'))
-  warning('unknown GDK backend target')
-endif
+libm_dep = cc.find_library('m')
 
-# GIO schemas
-gio_schemasdir = gio_dep.get_pkgconfig_variable(
+# Dependency directories
+
+dbus_dep = dependency('dbus-1')
+dbus_servicedir = dbus_dep.get_pkgconfig_variable(
+  'session_bus_services_dir',
+  define_variable: ['datadir', gt_prefix / gt_datadir],
+)
+dbus_interfacedir = dbus_dep.get_pkgconfig_variable('interfaces_dir')
+
+gio_schemadir = gio_dep.get_pkgconfig_variable(
   'schemasdir',
   define_variable: ['datadir', gt_prefix / gt_datadir],
-  default: gt_prefix / gt_datadir / 'glib-2.0/schemas',
+  default: gt_prefix / gt_datadir / 'glib-2.0' / 'schemas',
 )
 
-# systemd user unit directory
-systemd_systemduserunitdir = get_option('systemduserunitdir')
-if systemd_systemduserunitdir == ''
-  # FIXME: this would ideally use the systemduserunitdir pkgconfig variable, but
-  # it does not depend on variables we can override to install within prefix.
-  #systemd_systemduserunitdir = dependency('systemd').get_pkgconfig_variable('systemduserunitdir')
-  systemd_systemduserunitdir = gt_libdir / 'systemd/user'
+# It is correct for this to be in ${prefix}/lib, even on systems where that
+# does not match ${libdir}. This is what systemd uses on such platforms.
+systemd_userunitdir = gt_prefix / 'lib' / 'systemd' / 'user'
+
+# Shell search provider option
+
+if get_option('search_provider')
+  gs_searchproviderdir = gt_datadir / 'gnome-shell' / 'search-providers'
+
+  config_h.set('ENABLE_SEARCH_PROVIDER', true)
 endif
 
-# DBus
-dbus_dep = dependency('dbus-1')
-dbus_session_bus_services_dir = dbus_dep.get_pkgconfig_variable('session_bus_services_dir', define_variable: ['datadir', gt_prefix / gt_datadir])
+# Nautilus extension option
 
-# GNOME Shell search provider
-enable_search_provider = get_option('search_provider')
-if enable_search_provider
-  shell_search_provider_iface = dbus_dep.get_pkgconfig_variable('interfaces_dir') / 'org.gnome.ShellSearchProvider2.xml'
-  res = run_command(find_program('test'), '-e', shell_search_provider_iface)
-  assert(res.returncode() == 0, 'gnome-shell search provider requested but interface definition file not found')
-endif
-config_h.set('ENABLE_SEARCH_PROVIDER', enable_search_provider)
+if get_option('nautilus_extension')
+  assert(get_option('gtk3'), 'nautilus extension requires gtk3')
 
-# Nautilus extension
-enable_nautilus_extension = get_option('nautilus_extension')
-if enable_nautilus_extension
-  libnautilus_extension_dep = dependency('libnautilus-extension', version: '>= 3.0.0')
-  libnautilus_extension_extensiondir = libnautilus_extension_dep.get_pkgconfig_variable('extensiondir', define_variable: ['libdir', gt_prefix / gt_libdir])
-
-  appdata = gt_iface_name + '.Nautilus.metainfo.xml'
-
-  custom_target(
-    appdata,
-    input: appdata + '.in',
-    output: '@BASENAME@',
-    command: intltool_xml_cmd,
-    install: true,
-    install_dir: gt_datadir / 'metainfo',
+  nautilus_dep = dependency('libnautilus-extension', version: '>= 3.0.0')
+  nautilus_extensiondir = nautilus_dep.get_pkgconfig_variable(
+    'extensiondir',
+    define_variable: ['libdir', gt_prefix / gt_libdir],
   )
 endif
 
-subdir('data/icons')
-subdir('src')
-subdir('po')
-subdir('help')
+# Appstream data
 
-desktop_conf = {'VERSION': gt_version}
+appdatadir = gt_prefix / gt_datadir / 'metainfo'
 
-desktop = gt_iface_name + '.desktop'
+i18n.merge_file(
+  'org.gnome.Terminal.metainfo.xml',
+  input: 'org.gnome.Terminal.metainfo.xml' + '.in',
+  output: '@BASENAME@',
+  po_dir: podir,
+  install: true,
+  install_dir: appdatadir,
+)
+
+if get_option('nautilus_extension')
+  appdata = gt_iface_name + '.Nautilus.metainfo.xml'
+
+  i18n.merge_file(
+    'org.gnome.Terminal.Nautilus.metainfo.xml',
+    input: 'org.gnome.Terminal.Nautilus.metainfo.xml' + '.in',
+    output: '@BASENAME@',
+#    output: 'org.gnome.Terminal.Nautilus.metainfo.xml',
+    po_dir: podir,
+    install: true,
+    install_dir: appdatadir,
+)
+endif
+
+# Desktop file
+
+desktopdatadir = gt_prefix / gt_datadir / 'applications'
+
+desktop_conf = {
+  'VERSION': gt_version
+}
 
 desktop_in = configure_file(
-  input: desktop + '.in.in',
+  input: 'org.gnome.Terminal.desktop.in.in',
   output: '@BASENAME@',
   configuration: desktop_conf,
+  install: false,
 )
 
-custom_target(
-  desktop,
+i18n.merge_file(
+  'org.gnome.Terminal.desktop',
   input: desktop_in,
   output: '@BASENAME@',
-  command: intltool_desktop_cmd,
+  type: 'desktop',
+  po_dir: podir,
   install: true,
-  install_dir: gt_datadir / 'applications',
+  install_dir: desktopdatadir,
 )
 
-appdata = gt_iface_name + '.appdata.xml'
-
-custom_target(
-  appdata,
-  input: appdata + '.in',
-  output: '@BASENAME@',
-  command: intltool_xml_cmd,
-  install: true,
-  install_dir: gt_datadir / 'metainfo',
+meson.add_install_script(
+  'meson_desktopfile.py',
+  desktopdatadir,
+  'org.gnome.Terminal.desktop',
 )
+
+# Write config.h
 
 configure_file(
   output: 'config.h',
   configuration: config_h,
 )
 
-meson.add_install_script(
-  'meson_post_install.py',
-  gt_datadir,
-  gio_schemasdir,
+# Subdirs
+
+subdir('src')
+subdir('data/icons')
+subdir('po')
+
+if get_option('docs')
+  subdir('help')
+endif
+
+# Simple compat Makefile
+
+makefile_conf = configuration_data()
+makefile_conf.set('srcdir', meson.current_source_dir())
+makefile_conf.set('builddir', meson.current_build_dir())
+
+configure_file(
+  input: 'Makefile.meson',
+  output: '@BASENAME@',
+  configuration: makefile_conf,
 )
 
-output = '\ngnome-terminal-' + gt_version + ':\n\n'
-output += '\tprefix:                 ' + gt_prefix + '\n'
-output += '\tsource code location:   ' + source_root + '\n'
-output += '\tcompiler:               ' + cc.get_id() + '\n'
-output += '\tDBus service dir:       ' + dbus_session_bus_services_dir + '\n'
-output += '\tDebug:                  ' + gt_debug.to_string() + '\n'
-output += '\tSearch provider:        ' + enable_search_provider.to_string() + '\n'
-if enable_search_provider
-  output += '\tShell search provider:  ' + shell_search_provider_iface + '\n'
+# .gitignore everything in the build directory
+
+configure_file(
+  output: '.gitignore',
+  command: ['echo', '**/**',],
+  capture: true,
+  install: false,
+)
+
+# Summary
+
+output = '\n'
+output += 'Configuration for GNOME Terminal:\n\n'
+output += '  Version:                ' + gt_version + '\n'
+output += '\n'
+output += '  C compiler:             ' + cc.get_id() + '\n\n'
+output += '  Coverage:               ' + get_option('b_coverage').to_string() + '\n'
+output += '  Documentation:          ' + get_option('docs').to_string() + '\n'
+output += '  Debug:                  ' + enable_debug.to_string() + '\n'
+output += '  GTK+ 3.0:               ' + get_option('gtk3').to_string() + '\n'
+output += '  GTK+ 4.0:               ' + get_option('gtk4').to_string() + '\n\n'
+output += '  Nautilus Extension:     ' + get_option('nautilus_extension').to_string() + '\n'
+output += '  Search Provider:        ' + get_option('search_provider').to_string() + '\n'
+output += '\n'
+output += '  Prefix:                 ' + get_option('prefix') + '\n'
+output += '  Appstream data dir:     ' + appdatadir + '\n'
+output += '  D-BUS interfaces dir:   ' + dbus_interfacedir + '\n'
+output += '  D-BUS services dir:     ' + dbus_servicedir + '\n'
+output += '  Desktop data dir:       ' + desktopdatadir + '\n'
+output += '  Schemas dir:            ' + gio_schemadir + '\n'
+output += '  Systemd user unit dir:  ' + dbus_servicedir + '\n'
+if get_option('nautilus_extension')
+  output += '  Nautilus extension dir: ' + nautilus_extensiondir + '\n'
 endif
-output += '\tNautilus extension:     ' + enable_nautilus_extension.to_string() + '\n'
-if enable_nautilus_extension
-  output += '\tNautilus extension dir: ' + libnautilus_extension_extensiondir
+if get_option('search_provider')
+  output += '  Search provider dir:    ' + gs_searchproviderdir + '\n'
 endif
 message(output)
+
+# Done
